# surfer-struct-translator

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml  config.toml.example
.github/workflows/: release.yml
src/: config.rs  decompose.rs  generate.rs  lib.rs  meta_config.rs
struct-gen/: .clangd  CMakeLists.txt  Cargo.toml  build.rs
struct-gen/cpp/: reflect.cpp  session.cpp  slang_bridge.h
struct-gen/src/: dedup.rs  flist.rs  lib.rs  main.rs  slang.rs  toml_gen.rs  types.rs
struct-gen/test/: axi_types.sv  output.toml  packed_dims.sv  packed_dims_param.sv  plain_signal_dims.sv  test.f
