[workspace]
members = ["struct-gen"]
default-members = ["."]

[package]
name = "surfer-struct-translator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
surfer-translation-types = { path = "../surfer/surfer-translation-types", features = ["wasm_plugins"] }
surfer-struct-gen = { path = "struct-gen" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
