[workspace]
members = ["struct-gen"]
default-members = ["."]

[package]
name = "surfer-struct-translator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
surfer-translation-types = { git = "https://gitlab.com/surfer-project/surfer.git", features = ["wasm_plugins"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(target_os = "wasi")'.dependencies]
surfer-struct-gen = { path = "struct-gen" }
